change position of background image for small devices to center the image
change font size of caption for small devices

--- a/MyWebsite/includes/css/styles.css
+++ b/MyWebsite/includes/css/styles.css
@@ -85,16 +85,24 @@ Notes:	 Hand coded for Udemy.com
     height: 310px;
   }
 
+  .carousel-caption{
+    font-size: 12px;
+  }
+
+  .carousel-caption h4{
+    font-size: 18px;
+  }
+
   #slide1{
-    background: url('../../images/carousel_small_01.jpg') top left no-repeat;
+    background: url('../../images/carousel_small_01.jpg') top center no-repeat;
   }
 
   #slide2{
-    background: url('../../images/carousel_small_02.jpg') top left no-repeat;
+    background: url('../../images/carousel_small_02.jpg') top center no-repeat;
   }
 
   #slide3{
-    background: url('../../images/carousel_small_03.jpg') top left no-repeat;
+    background: url('../../images/carousel_small_03.jpg') top center no-repeat;
   }
 }
 
