--- a/MyWebsite/includes/css/styles.css
+++ b/MyWebsite/includes/css/styles.css
@@ -20,6 +20,16 @@ Notes:	 Hand coded for Udemy.com
    Typography
    -------------------------------------- */
 
+body{
+  -webkit-font-smoothing : antialiased;
+  text-rendering: optimizeLegibility;
+}
+.well .page-header{
+  margin-top: 0;
+}
+.well .page-header h1{
+  margin-top: 0;
+}
 
 
 /* --------------------------------------
@@ -67,8 +77,13 @@ Notes:	 Hand coded for Udemy.com
 /* --------------------------------------
    Global Styles
    -------------------------------------- */
-
-
+.alert {
+  margin-top: 20px;
+  display: none;
+}
+.well {
+  margin-top: 20px;
+}
 
 /* --------------------------------------
    Media Queries
