--- a/MyWebsite/includes/css/styles.css
+++ b/MyWebsite/includes/css/styles.css
@@ -24,6 +24,13 @@ Notes:	 Hand coded for Udemy.com
 #inputMessage {
   margin-bottom: 20px;
 }
+
+footer{
+  background: #333;
+  color: #eee;
+  font-size: 11px;
+  padding: 20px;
+}
 /* --------------------------------------
    Typography
    -------------------------------------- */
@@ -38,7 +45,10 @@ body{
 .well .page-header h1{
   margin-top: 0;
 }
-
+ul.unstyled{
+  list-style: none;
+  padding: 0;
+}
 
 /* --------------------------------------
    Navbar
